// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`helpCenterArticles reducer createHelpcenterArticle action should add a new helpcenterArticle to the state 1`] = `
Object {
  "1": Object {
    "category_id": undefined,
    "created_datetime": "2021-05-17T18:21:42.022Z",
    "deleted_datetime": undefined,
    "help_center_id": 1,
    "id": 1,
    "translation": Object {
      "article_id": 1,
      "content": "Article content",
      "created_datetime": "2021-05-17T18:21:42.022Z",
      "deleted_datetime": undefined,
      "excerpt": "Paragraph lorem ipsum, Yiddish xylophone wonder.",
      "locale": "en-US",
      "slug": "free-article",
      "title": "Free article (EN)",
      "updated_datetime": "2021-05-17T18:21:42.022Z",
    },
    "updated_datetime": "2021-05-17T18:21:42.022Z",
  },
}
`;

exports[`helpCenterArticles reducer deleteHelpcenterArticle action should delete a helpcenterArticle from the state 1`] = `
Object {
  "2": Object {
    "category_id": 4,
    "created_datetime": "2021-05-17T18:21:42.022Z",
    "deleted_datetime": undefined,
    "help_center_id": 1,
    "id": 2,
    "translation": Object {
      "article_id": 2,
      "content": "Article content",
      "created_datetime": "2021-05-17T18:21:42.022Z",
      "deleted_datetime": undefined,
      "excerpt": "This article only exists in english",
      "locale": "en-US",
      "slug": "in-eng-only",
      "title": "English only post",
      "updated_datetime": "2021-05-17T18:21:42.022Z",
    },
    "updated_datetime": "2021-05-17T18:21:42.022Z",
  },
}
`;

exports[`helpCenterArticles reducer fetchHelpcenterArticle action should add a new helpcenterArticle to the state 1`] = `
Object {
  "1": Object {
    "category_id": undefined,
    "created_datetime": "2021-05-17T18:21:42.022Z",
    "deleted_datetime": undefined,
    "help_center_id": 1,
    "id": 1,
    "translation": Object {
      "article_id": 1,
      "content": "Article content",
      "created_datetime": "2021-05-17T18:21:42.022Z",
      "deleted_datetime": undefined,
      "excerpt": "Paragraph lorem ipsum, Yiddish xylophone wonder.",
      "locale": "en-US",
      "slug": "free-article",
      "title": "Free article (EN)",
      "updated_datetime": "2021-05-17T18:21:42.022Z",
    },
    "updated_datetime": "2021-05-17T18:21:42.022Z",
  },
}
`;

exports[`helpCenterArticles reducer fetchHelpcenterArticles action should add the helpcenterArticles to the state 1`] = `
Object {
  "1": Object {
    "category_id": undefined,
    "created_datetime": "2021-05-17T18:21:42.022Z",
    "deleted_datetime": undefined,
    "help_center_id": 1,
    "id": 1,
    "translation": Object {
      "article_id": 1,
      "content": "Article content",
      "created_datetime": "2021-05-17T18:21:42.022Z",
      "deleted_datetime": undefined,
      "excerpt": "Paragraph lorem ipsum, Yiddish xylophone wonder.",
      "locale": "en-US",
      "slug": "free-article",
      "title": "Free article (EN)",
      "updated_datetime": "2021-05-17T18:21:42.022Z",
    },
    "updated_datetime": "2021-05-17T18:21:42.022Z",
  },
  "10": Object {
    "category_id": 4,
    "created_datetime": "2021-05-17T18:21:42.022Z",
    "deleted_datetime": undefined,
    "help_center_id": 1,
    "id": 10,
    "translation": Object {
      "article_id": 10,
      "content": "Article content",
      "created_datetime": "2021-05-17T18:21:42.022Z",
      "deleted_datetime": undefined,
      "excerpt": "This is about the returns",
      "locale": "en-US",
      "slug": "return-poicy",
      "title": "Return policy",
      "updated_datetime": "2021-05-17T18:21:42.022Z",
    },
    "updated_datetime": "2021-05-17T18:21:42.022Z",
  },
  "11": Object {
    "category_id": 2,
    "created_datetime": "2021-05-17T18:21:42.022Z",
    "deleted_datetime": undefined,
    "help_center_id": 1,
    "id": 11,
    "translation": Object {
      "article_id": 11,
      "content": "Article content",
      "created_datetime": "2021-05-17T18:21:42.022Z",
      "deleted_datetime": undefined,
      "excerpt": "This is about the returns",
      "locale": "en-US",
      "slug": "return-poicy",
      "title": "Return policy",
      "updated_datetime": "2021-05-17T18:21:42.022Z",
    },
    "updated_datetime": "2021-05-17T18:21:42.022Z",
  },
  "12": Object {
    "category_id": 3,
    "created_datetime": "2021-05-17T18:21:42.022Z",
    "deleted_datetime": undefined,
    "help_center_id": 1,
    "id": 12,
    "translation": Object {
      "article_id": 12,
      "content": "Article content",
      "created_datetime": "2021-05-17T18:21:42.022Z",
      "deleted_datetime": undefined,
      "excerpt": "This is about the returns",
      "locale": "en-US",
      "slug": "return-poicy",
      "title": "Return policy",
      "updated_datetime": "2021-05-17T18:21:42.022Z",
    },
    "updated_datetime": "2021-05-17T18:21:42.022Z",
  },
  "13": Object {
    "category_id": 1,
    "created_datetime": "2021-05-17T18:21:42.022Z",
    "deleted_datetime": undefined,
    "help_center_id": 1,
    "id": 13,
    "translation": Object {
      "article_id": 13,
      "content": "Article content",
      "created_datetime": "2021-05-17T18:21:42.022Z",
      "deleted_datetime": undefined,
      "excerpt": "This is about the returns",
      "locale": "en-US",
      "slug": "return-poicy",
      "title": "Return policy",
      "updated_datetime": "2021-05-17T18:21:42.022Z",
    },
    "updated_datetime": "2021-05-17T18:21:42.022Z",
  },
  "14": Object {
    "category_id": 4,
    "created_datetime": "2021-05-17T18:21:42.022Z",
    "deleted_datetime": undefined,
    "help_center_id": 1,
    "id": 14,
    "translation": Object {
      "article_id": 14,
      "content": "Article content",
      "created_datetime": "2021-05-17T18:21:42.022Z",
      "deleted_datetime": undefined,
      "excerpt": "This is about the pricing",
      "locale": "en-US",
      "slug": "pricing",
      "title": "Pricing",
      "updated_datetime": "2021-05-17T18:21:42.022Z",
    },
    "updated_datetime": "2021-05-17T18:21:42.022Z",
  },
  "15": Object {
    "category_id": 2,
    "created_datetime": "2021-05-17T18:21:42.022Z",
    "deleted_datetime": undefined,
    "help_center_id": 1,
    "id": 15,
    "translation": Object {
      "article_id": 15,
      "content": "Article content",
      "created_datetime": "2021-05-17T18:21:42.022Z",
      "deleted_datetime": undefined,
      "excerpt": "This is about the pricing",
      "locale": "en-US",
      "slug": "pricing",
      "title": "Pricing",
      "updated_datetime": "2021-05-17T18:21:42.022Z",
    },
    "updated_datetime": "2021-05-17T18:21:42.022Z",
  },
  "16": Object {
    "category_id": 3,
    "created_datetime": "2021-05-17T18:21:42.022Z",
    "deleted_datetime": undefined,
    "help_center_id": 1,
    "id": 16,
    "translation": Object {
      "article_id": 16,
      "content": "Article content",
      "created_datetime": "2021-05-17T18:21:42.022Z",
      "deleted_datetime": undefined,
      "excerpt": "This is about the pricing",
      "locale": "en-US",
      "slug": "pricing",
      "title": "Pricing",
      "updated_datetime": "2021-05-17T18:21:42.022Z",
    },
    "updated_datetime": "2021-05-17T18:21:42.022Z",
  },
  "17": Object {
    "category_id": 1,
    "created_datetime": "2021-05-17T18:21:42.022Z",
    "deleted_datetime": undefined,
    "help_center_id": 1,
    "id": 17,
    "translation": Object {
      "article_id": 17,
      "content": "Article content",
      "created_datetime": "2021-05-17T18:21:42.022Z",
      "deleted_datetime": undefined,
      "excerpt": "This is about the pricing",
      "locale": "en-US",
      "slug": "pricing",
      "title": "Pricing",
      "updated_datetime": "2021-05-17T18:21:42.022Z",
    },
    "updated_datetime": "2021-05-17T18:21:42.022Z",
  },
  "2": Object {
    "category_id": 4,
    "created_datetime": "2021-05-17T18:21:42.022Z",
    "deleted_datetime": undefined,
    "help_center_id": 1,
    "id": 2,
    "translation": Object {
      "article_id": 2,
      "content": "Article content",
      "created_datetime": "2021-05-17T18:21:42.022Z",
      "deleted_datetime": undefined,
      "excerpt": "This article only exists in english",
      "locale": "en-US",
      "slug": "in-eng-only",
      "title": "English only post",
      "updated_datetime": "2021-05-17T18:21:42.022Z",
    },
    "updated_datetime": "2021-05-17T18:21:42.022Z",
  },
  "3": Object {
    "category_id": 2,
    "created_datetime": "2021-05-17T18:21:42.022Z",
    "deleted_datetime": undefined,
    "help_center_id": 1,
    "id": 3,
    "translation": Object {
      "article_id": 3,
      "content": "Article content",
      "created_datetime": "2021-05-17T18:21:42.022Z",
      "deleted_datetime": undefined,
      "excerpt": "This article only exists in english",
      "locale": "en-US",
      "slug": "in-eng-only",
      "title": "English only post",
      "updated_datetime": "2021-05-17T18:21:42.022Z",
    },
    "updated_datetime": "2021-05-17T18:21:42.022Z",
  },
  "4": Object {
    "category_id": 3,
    "created_datetime": "2021-05-17T18:21:42.022Z",
    "deleted_datetime": undefined,
    "help_center_id": 1,
    "id": 4,
    "translation": Object {
      "article_id": 4,
      "content": "Article content",
      "created_datetime": "2021-05-17T18:21:42.022Z",
      "deleted_datetime": undefined,
      "excerpt": "This article only exists in english",
      "locale": "en-US",
      "slug": "in-eng-only",
      "title": "English only post",
      "updated_datetime": "2021-05-17T18:21:42.022Z",
    },
    "updated_datetime": "2021-05-17T18:21:42.022Z",
  },
  "5": Object {
    "category_id": 1,
    "created_datetime": "2021-05-17T18:21:42.022Z",
    "deleted_datetime": undefined,
    "help_center_id": 1,
    "id": 5,
    "translation": Object {
      "article_id": 5,
      "content": "Article content",
      "created_datetime": "2021-05-17T18:21:42.022Z",
      "deleted_datetime": undefined,
      "excerpt": "This article only exists in english",
      "locale": "en-US",
      "slug": "in-eng-only",
      "title": "English only post",
      "updated_datetime": "2021-05-17T18:21:42.022Z",
    },
    "updated_datetime": "2021-05-17T18:21:42.022Z",
  },
}
`;

exports[`helpCenterArticles reducer updateHelpcenterArticle action should replace an existing helpcenterArticle in the state 1`] = `
Object {
  "1": Object {
    "category_id": undefined,
    "created_datetime": "2021-05-17T18:21:42.022Z",
    "deleted_datetime": undefined,
    "help_center_id": 1,
    "id": 1,
    "name": "bar",
    "translation": Object {
      "article_id": 1,
      "content": "Article content",
      "created_datetime": "2021-05-17T18:21:42.022Z",
      "deleted_datetime": undefined,
      "excerpt": "Paragraph lorem ipsum, Yiddish xylophone wonder.",
      "locale": "en-US",
      "slug": "free-article",
      "title": "Free article (EN)",
      "updated_datetime": "2021-05-17T18:21:42.022Z",
    },
    "updated_datetime": "2021-05-17T18:21:42.022Z",
  },
}
`;
